# freeswitch-modules

./: .gitignore
mod_audio_fork/: CMakeLists.txt  README.md
mod_audio_fork/cmake/: FindSpeexDSP.cmake
mod_dialogflow/: AGENTS.md  CMakeLists.txt  Dockerfile.debian  Dockerfile.debian9  Makefile  Makefile.am  README.md  google_glue.cpp  mod_dialogflow.c  mod_dialogflow.h  parser.cpp  parser.h
mod_dialogflow/build-deb/: CPackConfig.cmake  CPackSourceConfig.cmake  build_info.h  freeswitch-mod-dialogflow_1.0.0_x86_64.deb
mod_dialogflow/build-deb/_CPack_Packages/Linux/DEB/: freeswitch-mod-dialogflow_1.0.0_amd64.deb
mod_dialogflow/build-deb/_CPack_Packages/Linux/DEB/freeswitch-mod-dialogflow_1.0.0_amd64/: control  md5sums
mod_dialogflow/build-stretch/: CPackConfig.cmake  CPackSourceConfig.cmake  build_info.h
mod_dialogflow/build-stretch/_CPack_Packages/Linux/DEB/freeswitch-mod-dialogflow_1.0.0_amd64/: control  md5sums
mod_dialogflow/cmake/: GenBuildInfo.cmake
mod_dialogflow/conf/: dialplan_dialogflow_sample.xml
mod_dialogflow/scripts/: build-deb.sh  build_and_install.sh  docker-build-deb-stretch.sh  docker-build-deb.sh  gen_googleapis.sh
